Fix gaps

--- a/source/_assets/css/main.scss
+++ b/source/_assets/css/main.scss
@@ -478,7 +478,7 @@ img {
     font-family: Menlo, Monaco, 'Courier New', Courier, monospace;
     font-size: 0.78em;
     line-height: 1.5;
-    background: var(--code-bg);
+    background: $code-bg;
     border-radius: 2px;
   }
 
@@ -487,7 +487,7 @@ img {
       display: block;
       margin-left: 0;
       margin-right: 0;
-      padding: var(--gap);
+      padding: $gap;
       color: rgba(255, 255, 255, 0.8);
       background: transparent;
       border-radius: 0;
